--- a/.gitignore
+++ b/.gitignore
@@ -1,129 +1,269 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
 *$py.class
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
+*-Ex.R
+*-blx.aux
+*-blx.bib
+*-concordance.tex
+*-converted-to.*
+*-gnuplottex-*
+*-tags.tex
+*-tikzDictionary
+*.4ct
+*.4tc
+*.?end
+*.DS_Store
+*.[1-9]
+*.[1-9]R
+*.[1-9][0-9]
+*.[1-9][0-9]R
+*.[1-9][0-9][0-9]
+*.[1-9][0-9][0-9]R
+*.acn
+*.acr
+*.alg
+*.asv
+*.autosave
+*.aux
+*.auxlock
+*.backup
+*.bak
+*.bbl
+*.bcf
+*.blg
+*.brf
+*.cb
+*.cb2
+*.cover
+*.cpt
+*.cut
+*.dpth
+*.dvi
 *.egg
-MANIFEST
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.egg-info/
+*.el
+*.eledsec[1-9]
+*.eledsec[1-9]R
+*.eledsec[1-9][0-9]
+*.eledsec[1-9][0-9]R
+*.eledsec[1-9][0-9][0-9]
+*.eledsec[1-9][0-9][0-9]R
+*.end
+*.ent
+*.fdb_latexmk
+*.fff
+*.fls
+*.fmt
+*.fot
+*.gaux
+*.glg
+*.glo
+*.glog
+*.gls
+*.glsdefs
+*.gnuplot
+*.gtex
+*.hst
+*.idv
+*.idx
+*.ilg
+*.ind
+*.knit.md
+*.lg
+*.listing
+*.loa
+*.lod
+*.loe
+*.lof
+*.log
+*.lol
+*.lot
+*.lox
+*.lpz
+*.ltjruby
+*.lyx~
+*.lzo
+*.lzs
+*.maf
 *.manifest
+*.md5
+*.mex*
+*.mf
+*.mlappinstall
+*.mlf
+*.mlt
+*.mltbx
+*.mo
+*.mp
+*.mtc[0-9]*
+*.mw
+*.m~
+*.nav
+*.newpax
+*.nlg
+*.nlo
+*.nls
+*.out
+*.pax
+*.pdfpc
+*.pdfsync
+*.pot
+*.pre
+*.ptc
+*.py,cover
+*.py[cod]
+*.pyg
+*.pytxcode
+*.run.xml
+*.sage.py
+*.sagetex.py
+*.sagetex.sage
+*.sagetex.scmd
+*.sav
+*.slf[0-9]*
+*.slg
+*.slo
+*.sls
+*.slt[0-9]*
+*.slxc
+*.snm
+*.so
+*.soc
+*.sout
 *.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
+*.spl
+*.sta
+*.stc[0-9]*
+*.sympy
+*.synctex
+*.synctex(busy)
+*.synctex.gz
+*.synctex.gz(busy)
+*.t[1-9]
+*.t[1-9][0-9]
+*.table
+*.tdo
+*.tfm
+*.thm
+*.toc
+*.tps
+*.trc
+*.ttt
+*.upa
+*.upb
+*.utf8.md
+*.ver
+*.vrb
+*.wrt
+*.xcp
+*.xdv
+*.xdy
+*.xmpi
+*.xref
+*.xwm
+*.xyc
+*.xyd
+*_cache/
+*~[0-9]*
+.*.lb
+.*.swp
+./auto/*
+.Python
+.RData
+.RDataTmp
+.Rapp.history
+.Renviron
+.Rhistory
+.Rproj.user/
+.Ruserdata
+.cache
 .coverage
 .coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
+.dmypy.json
+.eggs/
 .env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
+.httr-oauth
+.hugo_build.lock
+.hypothesis/
+.installed.cfg
+.ipynb_checkpoints
+.mypy_cache/
+.nox/
+.pdf
+.pdm.toml
+.pybuilder/
+.pyre/
+.pytest_cache/
+.pytype/
+.ropeproject
+.scrapy
 .spyderproject
 .spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
+.texpadtmp
+.tox/
+.venv
+.webassets-cache
+/*.Rcheck/
+/*.tar.gz
+/cache/
 /site
-
-# mypy
-.mypy_cache/
-.dmypy.json
+ENV/
+MANIFEST
+TSWLatexianTemp*
+__pycache__/
+__pypackages__/
+_minted*
+acs-*.bib
+assets/jsconfig.json
+build/
+celerybeat-schedule
+celerybeat.pid
+codegen/
+cover/
+coverage.xml
+cython_debug/
+db.sqlite3
+db.sqlite3-journal
+develop-eggs/
+dist/
 dmypy.json
-
-# Pyre type checker
-.pyre/
+docs/
+docs/_build/
+downloads/
+eggs/
+env.bak/
+env/
+helpsearch*/
+htmlcov/
+hugo.darwin
+hugo.exe
+hugo.linux
+hugo_stats.json
+instance/
+ipython_config.py
+latex.out/
+lib/
+lib64/
+local_settings.py
+node_modules/
+nosetests.xml
+octave-workspace
+parts/
+pip-delete-this-directory.txt
+pip-log.txt
+po/*~
+profile_default/
+# public/
+pythontex-files-*/
+rsconnect/
+sccprj/
+sdist/
+share/python-wheels/
+slprj/
+svg-inkscape/
+sympy-plots-for-*.tex/
+target/
+var/
+venv.bak/
+venv/
+vignettes/*.html
+vignettes/*.pdf
+wheels/
